# sql_app

./: .gitignore  README.md  pyproject.toml
sql_app/: database.py  main.py
